--- a/src/main-cards/MainCards.css
+++ b/src/main-cards/MainCards.css
@@ -7,8 +7,7 @@
 
 .primary-card {
     width: 250px;
-    text-align: center;
-    height: 300px;
+    height: 350px;
     border: 4px solid red;
     border-radius: 10px;
     box-shadow: 3px 3px gray;
@@ -17,6 +16,11 @@
 }
 
 .primary-card:hover {
-    transform: scale(.99, .99);
+    transform: scale(1.05, 1.05);
+    box-shadow: none;
+}
+
+.primary-card:active {
+    transform: scale(1, 1);
     box-shadow: none;
 }
